add week logic & day template

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>NgxCalendar</title>
@@ -7,8 +8,30 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="author" content="點亮工作室">
+  <meta name="copyright" content="點亮工作室">
+
+  <link rel="author" href="https://github.com/SHANG-TING/ngx-calendar">
+  <link rel="publisher" href="https://github.com/SHANG-TING/ngx-calendar">
+  <meta name="description" content="angular calendar">
+
+  <meta itemprop="name" content="NgxCalendar">
+  <meta itemprop="image" content="/ngx-calendar/assets/title.png">
+  <meta itemprop="description" content="angular calendar">
+
+  <meta property="og:title" content="NgxCalendar">
+  <meta property="og:site_name" content="NgxCalendar"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://shang-ting.github.io/ngx-calendar/">
+  <meta property="og:image" content="/ngx-calendar/assets/title.png">
+  <meta property="og:description" content="angular calendar">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
