change project name to demo, different with package name

--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,19 @@
   <meta name="author" content="點亮工作室">
   <meta name="copyright" content="點亮工作室">
 
-  <link rel="author" href="https://github.com/SHANG-TING/ngx-calendar">
-  <link rel="publisher" href="https://github.com/SHANG-TING/ngx-calendar">
+  <link rel="author" href="https://github.com/SHANG-TING/ngx-hm-calendar">
+  <link rel="publisher" href="https://github.com/SHANG-TING/ngx-hm-calendar">
   <meta name="description" content="angular calendar">
 
   <meta itemprop="name" content="NgxCalendar">
-  <meta itemprop="image" content="/ngx-calendar/assets/title.png">
+  <meta itemprop="image" content="/ngx-hm-calendar/assets/title.png">
   <meta itemprop="description" content="angular calendar">
 
   <meta property="og:title" content="NgxCalendar">
   <meta property="og:site_name" content="NgxCalendar"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://shang-ting.github.io/ngx-calendar/">
-  <meta property="og:image" content="/ngx-calendar/assets/title.png">
+  <meta property="og:url" content="https://shang-ting.github.io/ngx-hm-calendar/">
+  <meta property="og:image" content="/ngx-hm-calendar/assets/title.png">
   <meta property="og:description" content="angular calendar">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
